--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -76,7 +76,7 @@
               </div>
 
               <div class="auth-field">
-                <label for="district">District <span class="required">*</span></label>
+                <label for="district">District / Province <span class="required">*</span></label>
                 <input id="district" name="district" type="text" placeholder="Enter your district" value="<%= existingData.district || '' %>" required>
                 <span class="error-message">Please enter your district.</span>
               </div>
@@ -124,7 +124,7 @@
 
               <div class="auth-field">
                 <label for="password">Password <span class="required">*</span></label>
-                <input id="password" name="password" type="password" placeholder="Choose a secure password" minlength="8" required>
+                <input id="password" name="password" type="password" placeholder="Minimum 8 characters" minlength="8" required>
                 <span class="error-message">Password must be at least 8 characters long.</span>
               </div>
             </div>
