--- a/views/admin/admin-sidebar.ejs
+++ b/views/admin/admin-sidebar.ejs
@@ -11,9 +11,9 @@
       </a>
     </li>
     <li class="menu-item">
-      <a href="#" class="menu-link">
+      <a href="/admin/candidates" class="menu-link">
         <span class="menu-icon">👥</span>
-        <span class="menu-text">User Management</span>
+        <span class="menu-text">Candidates</span>
       </a>
     </li>
     <li class="menu-item">
